0030430: Draw - command testgrid in parallel mode hangs if DRAW is launched without GUI

Ensure that initialization of Tcl interpretor is performed in the same thread where commands are evaluated.

Added test demo draw bug30430